@@ -3,6 +3,7 @@ Added tray icon
 Window layout changed (semi transparent, rounded corner, no more top bar)
 Clicking and holding the mouse in a window moves it
 Accounts listings (prefernces and combobox in compose window) now show the user avatar image
+Selecting another account in combobox / compose window refocuses the text enter area
 
 0.2
 Upgrade to AppNet.NET 1.6.2
